_includes/manuals/1.7/4.4.6_prov_workflow.md

Foreman performs a number of orchestration steps when performing unattended installation or provisioning, which vary depending on the integration options chosen - e.g. use of [compute resources](/manuals/{{page.version}}/index.html#5.2ComputeResources), configuration management tool and provisioning method (network/PXE/image).

#### 4.4.6.1 Example A

The following example uses:

* Compute resource (oVirt), also applicable to Libvirt and VMware
* Network (PXE) provisioning with DHCP and TFTP orchestration
* DNS orchestration
* Salt configuration management, also applicable to Puppet

![Example A workflow diagram](/static/images/diagrams/foreman_workflow_final.jpg)

##### Steps

1. On the New Host page, the default VM configuration is shown and compute profiles can be applied.
2. An unused IP address is requested from the DHCP smart proxy associated with the subnet.
3. The IP address field is filled in on the New Host page.
4. n/a
5. The New Host page is submitted.
6. Foreman contacts the compute resource to create the virtual machine.
7. The compute resource creates a virtual machine on a hypervisor.
8. The VM's MAC address is returned from the compute resource and stored on the host.
9. A reservation is created on the DHCP smart proxy associated with the subnet.
10. DNS records are set up:
    1. A forward DNS record is created on the smart proxy associated with the domain.
    1. A reverse DNS record is created on the DNS smart proxy associated with the subnet.
11. A PXELinux menu is created for the host in the TFTP smart proxy associated with the subnet.
12. Foreman contacts the compute resource to power on the VM.
13. The compute resource powers up the virtual machine.
14. The host requests a DHCP lease from the DHCP server.
15. The DHCP lease response is returned with TFTP options (next-server, filename) set.
16. The host requests the bootloader and menu from the TFTP server.
17. The PXELinux menu and OS installer for the host is returned over TFTP.
18. The installer requests the "provision" template/script from Foreman.
19. Foreman renders the template and returns the resulting kickstart/preseed to the host.
20. Autosigning configuration for Salt (or Puppet) is added on the Salt or Puppet CA smart proxy.
21. The installer notifies Foreman of a successful build in the postinstall script.
22. The PXELinux menu is reverted to a "local boot" template.
23. The host requests its configuration from Salt or Puppet.
24. The host receives appropriate configuration using data defined in Foreman.
25. Configuration reports and facts are sent from Salt or Puppet to Foreman and stored.
